# fire

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  API.rst  CMakeLists.txt  Doxyfile  Doxyfile.cmake  Doxyfile.rtfd  LICENSE  README.md  conf.py  contents.rst  index.rst
astrophysics/: CMakeLists.txt  Reaction.h  ReactionLocalParser.h  ReactionNetwork.h  Species.h  SpeciesLocalParser.h
astrophysics/tests/: NetworkIntegrationTest.cpp  ReactionLocalParserTest.cpp  ReactionNetworkTest.cpp  SpeciesLocalParserTest.cpp  alpha_gold.ini
cmake/Modules/: FindMAGMA.cmake  FindSUNDIALS.cmake  tests.cmake
data/: README.md
docker/fedora/: Dockerfile
docker/ubuntu/: Dockerfile
docs/: Gemfile  LICENSE.txt  _config.yml  about.md  index.html
docs-doxygen/doxygen-bootstrapped/: customdoxygen-biogears.css  customdoxygen.css  header.html
docs/_includes/: footer.html  head.html  header.html
docs/_layouts/: page.html
docs/_posts/: 2016-10-01-fire-blog-configuration.adoc  2016-10-02-fire-jekyll-configuration.markdown  2016-10-29-fire-memory-model.markdown  2016-10-30-parsers.markdown  2016-10-30-running-tests.markdown  2016-11-06-astrophysical-reactions.markdown  2016-11-12-astrophysics-reactions-ascii-format.markdown  2016-11-12-astrophysics-species-ascii-format.markdown  2016-11-14-builders.markdown  2017-10-05-finite-elements.markdown  2017-10-11-fire-performance-model.markdown  2017-11-02-quadrature.markdown
docs/_site/: feed.xml  index.html  sitemap.xml
docs/_site/2016/design-stories/: index.html
docs/_site/2016/science/: index.html
docs/_site/2016/science0/: index.html
docs/_site/2016/welcome-to-jekyll/: index.html
docs/_site/about/: index.html
docs/_site/css/: style.css
docs/_site/design/: index.html
docs/_site/download/: index.html
docs/_site/science/: index.html
docs/api/html/: a00001.html  a00002.html  a00002_source.html  a00003.html  a00004.html  a00005.html  a00005_source.html  a00006.html  a00007.html  a00008.html  a00008_source.html  a00009.html  a00010.html  a00011.html  a00011_source.html  a00012.html  a00013.html  a00014.html  a00014_source.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  a00020.html  a00021.html  a00022.html  a00023.html  a00024.html  a00025.html  a00026.html  a00027.html  a00028.html  a00029.html  a00030.html  a00031.html  a00032.html  a00032_source.html  a00033.html  a00034.html  (+607 more)
docs/api/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  classes_2.js  classes_3.js  classes_4.js  (+118 more)
docs/api/latex/: a00003.tex  a00004.tex  a00005.tex  a00006.tex  a00007.tex  a00008.tex  a00009.tex  a00010.tex  a00011.tex  a00012.tex  a00013.tex  a00014.tex  a00015.tex  a00016.tex  a00017.tex  a00018.tex  a00019.tex  a00020.tex  a00021.tex  a00022.tex  a00023.tex  a00024.tex  a00025.tex  a00026.tex  a00027.tex  a00028.tex  a00029.tex  a00030.tex  a00031.tex  a00032.tex  a00033.tex  a00034.tex  a00035.tex  a00036.tex  a00037.tex  a00038.tex  a00039.tex  a00040.tex  a00041.tex  a00042.tex  (+295 more)
fem/: CMakeLists.txt  ConstantStrainTriangleElement.cpp  ConstantStrainTriangleElement.h  FEMTypes.h  LaplaceCSTElement.cpp  LaplaceCSTElement.h  MatrixElement.h  Node.h  NodePair.h  PoissonCST.cpp  PoissonCST.h  TwoDDirichletBoundaryCondition.cpp  TwoDDirichletBoundaryCondition.h  TwoDRobinBoundaryCondition.cpp  TwoDRobinBoundaryCondition.h
fem/tests/: ConstantStrainTriangleElementTest.cpp  FEMTypesTest.cpp  LaplaceCSTElementTest.cpp  MatrixElementTest.cpp  NodePairTest.cpp  NodeTest.cpp  PoissonCSTTest.cpp  TwoDDirichletBoundaryConditionTest.cpp  TwoDRobinBoundaryConditionTest.cpp
ganjiang/: .project  AutoMeshScript.py  Auto_mesh_script.py  ExportTet10.py  ExportTet4.py  README.MD  Weld.py
ganjiang/examples/: README.MD  T_plate.stp  cube.step  ex1.ini  ex2.ini
ganjiang/test/: AutoMeshScriptTest.py
ganjiang/test/data/: test1.ini
integrators/: CMakeLists.txt  IStepper.h  ProfileStepper.h  System.h
integrators/tests/: ProfileStepperTest.cpp
oce-python-test/: .project
oce-python-test/gov/ornl/ssd/yf22/: .gitignore  cantilever-repaired-refined.brep  cantilever-repaired-unrefined.brep  cantilever-unrepaired-refined.brep  cantilever-unrepaired-unrefined.brep  cantilever.brep  cantilever.fcstd  cantilever.fcstd1  cantilever.iges  cantilever.off  cubeWithHole.brep  cylinder.brep  ng.ini  notes.md  point.csv  profile.out  pythonoce-test.py  solid_1.csv
quadrature/: CMakeLists.txt  LineQuadratureRule.cpp  LineQuadratureRule.h  TriangularQuadratureRule.cpp  TriangularQuadratureRule.h
quadrature/tests/: LineQuadratureRuleTest.cpp  TriangularQuadratureRuleTest.cpp
solvers/: CMakeLists.txt  IVPSolver.h  ODESolver.h  State.h  Vector.h  fire_cvode_functions.cpp  fire_cvode_functions.h
solvers/tests/: IVPSolverTest.cpp  StateTest.cpp
solvers/tests/lapack/: example_DGESV_rowmajor.c
solvers/tests/magma/: example_v2.c
solvers/tests/sundials/: IVPSolverTest.cpp
tensors/: CMakeLists.txt  FireTensor.cpp  FireTensor.hpp  ITensor.hpp  Tensor.hpp  TensorOperationProvider.hpp  TensorProvider.hpp  TensorShape.hpp  TensorUtils.hpp
tensors/impl/: EigenTensor.cpp  EigenTensor.hpp  EigenTensorOperationProvider.hpp  EigenTensorProvider.hpp  FireTensor.cpp  FireTensor.hpp  FireTensorOperationProvider.cpp  FireTensorOperationProvider.hpp  FireTensorProvider.hpp
tensors/tests/: TensorTest.cpp
tpls/: CMakeLists.txt  README.txt
tpls/simpleini-4.17/: CMakeLists.txt
tpls/simpleweb/: client_http.hpp  client_https.hpp  server_http.hpp  server_https.hpp
util/: AsioNetworkingTool.hpp  CMakeLists.txt  INetworkingTool.hpp
util/tests/: AsioNetworkingToolTest.cpp  FakeServer.hpp
